Added a few more examples with datasets and replicated the files in Workshop notebook

--- a/Final-notebooks/Example2-TransferLearning/transfer-learning.ipynb
+++ b/Final-notebooks/Example2-TransferLearning/transfer-learning.ipynb
@@ -466,7 +466,7 @@
     "logits = Dense(2)(flatten)\n",
     "lrModel = Model(inputNode, logits)\n",
     "classifier = NNClassifier(lrModel, CrossEntropyCriterion(), transformer) \\\n",
-    "        .setLearningRate(0.003).setBatchSize(40).setMaxEpoch(1).setFeaturesCol(\"image\") \\\n",
+    "        .setLearningRate(0.003).setBatchSize(4).setMaxEpoch(1).setFeaturesCol(\"image\") \\\n",
     "        .setCachingSample(False)\n",
     "pipeline = Pipeline(stages=[classifier])"
    ]
@@ -500,7 +500,15 @@
     }
    ],
    "source": [
-    "catdogModel = pipeline.fit(trainingDF)\n",
+    "catdogModel = pipeline.fit(trainingDF)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "predictionDF = catdogModel.transform(validationDF).cache()"
    ]
   },
