--- a/Final-notebooks/Example1-MNIST/mnist.ipynb
+++ b/Final-notebooks/Example1-MNIST/mnist.ipynb
@@ -1,82 +1,231 @@
-#
-# Copyright 2018 Analytics Zoo Authors.
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#
-
-import tensorflow as tf
-from zoo import init_nncontext
-from zoo.pipeline.api.net import TFOptimizer, TFDataset
-from bigdl.optim.optimizer import *
-import sys
-from tensorflow.keras.models import Model
-from tensorflow.keras.layers import *
-
-from bigdl.dataset import mnist
-from bigdl.dataset.transformer import *
-
-
-def main(max_epoch, data_num):
-    sc = init_nncontext()
-
-    # get data, pre-process and create TFDataset
-    def get_data_rdd(dataset):
-        (images_data, labels_data) = mnist.read_data_sets("/tmp/mnist", dataset)
-        image_rdd = sc.parallelize(images_data[:data_num])
-        labels_rdd = sc.parallelize(labels_data[:data_num])
-        rdd = image_rdd.zip(labels_rdd) \
-            .map(lambda rec_tuple: [normalizer(rec_tuple[0], mnist.TRAIN_MEAN, mnist.TRAIN_STD),
-                                    np.array(rec_tuple[1])])
-        return rdd
-
-    training_rdd = get_data_rdd("train")
-    testing_rdd = get_data_rdd("test")
-    dataset = TFDataset.from_rdd(training_rdd,
-                                 names=["features", "labels"],
-                                 shapes=[[28, 28, 1], []],
-                                 types=[tf.float32, tf.int32],
-                                 batch_size=280,
-                                 val_rdd=testing_rdd
-                                 )
-
-    data = Input(shape=[28, 28, 1])
-
-    x = Flatten()(data)
-    x = Dense(64, activation='relu')(x)
-    x = Dense(64, activation='relu')(x)
-    predictions = Dense(10, activation='softmax')(x)
-
-    model = Model(inputs=data, outputs=predictions)
-
-    model.compile(optimizer='rmsprop',
-                  loss='sparse_categorical_crossentropy',
-                  metrics=['accuracy'])
-
-    optimizer = TFOptimizer.from_keras(model, dataset)
-
-    optimizer.set_train_summary(TrainSummary("/tmp/mnist_log", "mnist"))
-    optimizer.set_val_summary(ValidationSummary("/tmp/mnist_log", "mnist"))
-    # kick off training
-    optimizer.optimize(end_trigger=MaxEpoch(max_epoch))
-
-    model.save_weights("/tmp/mnist_keras.h5")
-
-if __name__ == '__main__':
-
-    max_epoch = 5
-    data_num = 60000
-
-    if len(sys.argv) > 1:
-        max_epoch = int(sys.argv[1])
-        data_num = int(sys.argv[2])
-    main(max_epoch, data_num)
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Copyright 2018 Analytics Zoo Authors.\n",
+    "# http://www.apache.org/licenses/LICENSE-2.0\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\", message = \"numpy.dtype size changed\")\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "from zoo import init_nncontext\n",
+    "from zoo.pipeline.api.net import TFOptimizer, TFDataset\n",
+    "from bigdl.optim.optimizer import *\n",
+    "import sys\n",
+    "# from tensorflow.keras.models import Model, Sequential\n",
+    "# from tensorflow.keras.layers import *\n",
+    "from zoo.pipeline.api.keras.models import Sequential\n",
+    "from zoo.pipeline.api.keras.layers import Dense, Activation, Flatten, Reshape, Convolution2D, MaxPooling2D\n",
+    "\n",
+    "from bigdl.dataset import mnist\n",
+    "from bigdl.dataset.transformer import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc = init_nncontext()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train_rdd = sc.parallelize(mnist.read_data_sets(\"/tmp/mnist\", \"train\")) \\\n",
+    "#             .map(lambda x: read_image_and_label(x)) \\\n",
+    "#             .map(lambda image_label: decode_to_ndarrays(image_label))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model = Sequential()\n",
+    "# model.add(Reshape((1, 28, 28), input_shape=(28, 28, 1)))\n",
+    "# model.add(Convolution2D(6, 5, 5, activation=\"tanh\", name=\"conv1_5x5\"))\n",
+    "# model.add(MaxPooling2D())\n",
+    "# model.add(Convolution2D(12, 5, 5, activation=\"tanh\", name=\"conv2_5x5\"))\n",
+    "# model.add(MaxPooling2D())\n",
+    "# model.add(Flatten())\n",
+    "# model.add(Dense(100, activation=\"tanh\", name=\"fc1\"))\n",
+    "# model.add(Dense(10, activation=\"softmax\", name=\"fc2\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model.compile(loss = 'mean_squared_error', optimizer = 'sgd', metrics = ['mae'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model.get_input_shape()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model.get_output_shape()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model.fit(training_rdd, batch_size = 128, nb_epoch = 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get data, pre-process and create TFDataset\n",
+    "def get_data_rdd(dataset):\n",
+    "    (images_data, labels_data) = mnist.read_data_sets(\"/tmp/mnist\", dataset)\n",
+    "    # image_rdd = sc.parallelize(images_data[:data_num])\n",
+    "    image_rdd = sc.parallelize(images_data)\n",
+    "    # labels_rdd = sc.parallelize(labels_data[:data_num])\n",
+    "    labels_rdd = sc.parallelize(labels_data)\n",
+    "    rdd = image_rdd.zip(labels_rdd) \\\n",
+    "        .map(lambda rec_tuple: [normalizer(rec_tuple[0], mnist.TRAIN_MEAN, mnist.TRAIN_STD),\n",
+    "                                np.array(rec_tuple[1])])\n",
+    "    return rdd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data_num = 60000\n",
+    "training_rdd = get_data_rdd(\"train\")\n",
+    "testing_rdd = get_data_rdd(\"test\")\n",
+    "\n",
+    "batch_size = 512\n",
+    "\n",
+    "# Images are 28 by 28 pixels with one color channel for black and white; labels have no dimmensions because they are integers\n",
+    "dataset = TFDataset.from_rdd(training_rdd,\n",
+    "                             names=[\"features\", \"labels\"],\n",
+    "                             shapes=[[28, 28, 1], []], \n",
+    "                             types=[tf.float32, tf.int32],\n",
+    "                             batch_size=batch_size,\n",
+    "                             val_rdd=testing_rdd\n",
+    "                             )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_rdd.take(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = Input(shape=[28, 28, 1]) # Must match the dimmensions of the images\n",
+    "x = Flatten()(data)\n",
+    "x = Dense(64, activation='relu')(x)\n",
+    "x = Dense(64, activation='relu')(x)\n",
+    "predictions = Dense(10, activation='softmax')(x)\n",
+    "\n",
+    "model = Model(inputs=data, outputs=predictions)\n",
+    "\n",
+    "model.compile(optimizer='rmsprop',\n",
+    "              loss='sparse_categorical_crossentropy',\n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "optimizer = TFOptimizer.from_keras(keras_model=model, dataset=dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer.set_train_summary(TrainSummary(\"/tmp/mnist_log\", \"mnist\"))\n",
+    "optimizer.set_val_summary(ValidationSummary(\"/tmp/mnist_log\", \"mnist\"))\n",
+    "# kick off training\n",
+    "max_epoch = 5\n",
+    "optimizer.optimize(end_trigger=MaxEpoch(max_epoch))\n",
+    "\n",
+    "# model.save_weights(\"/tmp/mnist_keras.h5\")"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 2",
+   "language": "python",
+   "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.5"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
