Updated "incomplete" notebooks and both mnist notebooks.

--- a/Final-notebooks/Example1-MNIST/mnist.ipynb
+++ b/Final-notebooks/Example1-MNIST/mnist.ipynb
@@ -1,6 +1,37 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Image Classification on MNIST"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this notebook we demonstrate how to build a neural network to classify images. The neural network will be built using the Keras style API available in Analytics Zoo, and use a BigDL optimizer to train the model.\n",
+    "\n",
+    "Data: \n",
+    "* The dataset used is MNIST, which is a collection of handwritten numbers ranging from 0 to 9. The data training dataset contains 60000 images and the test set contains 10000 images. We will try to predict the number in each image."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Intialization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* import necessary libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -17,13 +48,20 @@
     "from zoo.pipeline.api.net import TFOptimizer, TFDataset\n",
     "from bigdl.optim.optimizer import *\n",
     "import sys\n",
-    "# from tensorflow.keras.models import Model, Sequential\n",
+    "from tensorflow.keras.models import Model\n",
     "# from tensorflow.keras.layers import *\n",
-    "from zoo.pipeline.api.keras.models import Sequential\n",
+    "# from zoo.pipeline.api.keras.models import Sequential\n",
     "from zoo.pipeline.api.keras.layers import Dense, Activation, Flatten, Reshape, Convolution2D, MaxPooling2D\n",
     "\n",
     "from bigdl.dataset import mnist\n",
     "from bigdl.dataset.transformer import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Initilaize NN context, it will get a SparkContext with optimized configuration for BigDL performance."
    ]
   },
   {
@@ -36,89 +74,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# train_rdd = sc.parallelize(mnist.read_data_sets(\"/tmp/mnist\", \"train\")) \\\n",
-    "#             .map(lambda x: read_image_and_label(x)) \\\n",
-    "#             .map(lambda image_label: decode_to_ndarrays(image_label))"
+    "## Data Preparation"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# model = Sequential()\n",
-    "# model.add(Reshape((1, 28, 28), input_shape=(28, 28, 1)))\n",
-    "# model.add(Convolution2D(6, 5, 5, activation=\"tanh\", name=\"conv1_5x5\"))\n",
-    "# model.add(MaxPooling2D())\n",
-    "# model.add(Convolution2D(12, 5, 5, activation=\"tanh\", name=\"conv2_5x5\"))\n",
-    "# model.add(MaxPooling2D())\n",
-    "# model.add(Flatten())\n",
-    "# model.add(Dense(100, activation=\"tanh\", name=\"fc1\"))\n",
-    "# model.add(Dense(10, activation=\"softmax\", name=\"fc2\"))"
+    "* Create function to import and format the images."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# model.compile(loss = 'mean_squared_error', optimizer = 'sgd', metrics = ['mae'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# model.get_input_shape()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# model.get_output_shape()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# model.fit(training_rdd, batch_size = 128, nb_epoch = 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -140,15 +107,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Download and read the MNIST data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data_num = 60000\n",
     "training_rdd = get_data_rdd(\"train\")\n",
-    "testing_rdd = get_data_rdd(\"test\")\n",
-    "\n",
+    "testing_rdd = get_data_rdd(\"test\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Format the RDDs into a TensorFlow Dataset object. Format the shape of the input features to that of the images."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Batch size can be adjusted to improve the model, but must be a multiple of the total number of cores in the Spark environment\n",
     "batch_size = 512\n",
     "\n",
     "# Images are 28 by 28 pixels with one color channel for black and white; labels have no dimmensions because they are integers\n",
@@ -162,12 +150,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "training_rdd.take(3)"
+    "## Build Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Create the model structure, with inputs being the shape of the images and outputs being the number of image classes."
    ]
   },
   {
@@ -176,12 +169,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = Input(shape=[28, 28, 1]) # Must match the dimmensions of the images\n",
+    "data = Input(shape=[28, 28, 1]) # Must match the dimmensions of the images specified in the TFDataset\n",
+    "# x = Convolution2D(6, 5, 5, activation='tanh', name='conv1_5x5')(data)\n",
+    "# x = MaxPooling2D()(x)\n",
     "x = Flatten()(data)\n",
+    "x = Dense(64, activation='relu')(x) # The number of dense units can be adjusted to attempt to improve the model.\n",
     "x = Dense(64, activation='relu')(x)\n",
-    "x = Dense(64, activation='relu')(x)\n",
-    "predictions = Dense(10, activation='softmax')(x)\n",
-    "\n",
+    " # The number of dense units in the predictions (output) layer should match the number of classes\n",
+    "predictions = Dense(10, activation='softmax')(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Initialize the model and the optimizer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "model = Model(inputs=data, outputs=predictions)\n",
     "\n",
     "model.compile(optimizer='rmsprop',\n",
@@ -189,6 +199,14 @@
     "              metrics=['accuracy'])\n",
     "\n",
     "optimizer = TFOptimizer.from_keras(keras_model=model, dataset=dataset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Set location for model training summary output.\n",
+    "* Train the model."
    ]
   },
   {
@@ -201,10 +219,22 @@
     "optimizer.set_val_summary(ValidationSummary(\"/tmp/mnist_log\", \"mnist\"))\n",
     "# kick off training\n",
     "max_epoch = 5\n",
-    "optimizer.optimize(end_trigger=MaxEpoch(max_epoch))\n",
-    "\n",
-    "# model.save_weights(\"/tmp/mnist_keras.h5\")"
+    "optimizer.optimize(end_trigger=MaxEpoch(max_epoch))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
