--- a/Workshop-notebooks/Example2-TransferLearning/transfer-learning-incomplete.ipynb
+++ b/Workshop-notebooks/Example2-TransferLearning/transfer-learning-incomplete.ipynb
@@ -126,9 +126,16 @@
     "getLabel = udf(lambda name: 1.0 if name.startswith('cat') else 2.0, DoubleType())\n",
     "\n",
     "labelDF = imageDF.withColumn(\"name\", getName(col(\"image\"))) \\\n",
-    "        .withColumn(\"label\", getLabel(col('name')))\n",
-    "(trainingDF, validationDF) = labelDF.randomSplit([, ]) # Could be [0.8, 0.2], [0.75, 0.25], [0.7, 0.3], [0.6, 0.4], etc\n",
-    "labelDF.select(\"name\",\"label\").show(10)"
+    "        .withColumn(\"label\", getLabel(col('name')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split the labelDF into training and validation sets. Then show the name and label for the first 10 rows\n"
    ]
   },
   {
@@ -151,9 +158,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transformer = ChainedPreprocessing(\n",
-    "        [RowToImageFeature(), ImageResize(256, 256), ImageCenterCrop(224, 224),\n",
-    "         ImageChannelNormalize(123.0, 117.0, 104.0), ImageMatToTensor(), ImageFeatureToTensor()])"
+    "# Create a chained preprocessor that converts the row-wise data to image features and resize the image. \n",
+    "# Then conver the images to tensors\n",
+    "# Optionally crop the image and normalize it\n",
+    "transformer = "
    ]
   },
   {
@@ -176,7 +184,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_model = Net.load_bigdl(model_path)"
+    "# Load the pretrained model\n",
+    "full_model = "
    ]
   },
   {
@@ -201,9 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for layer in full_model.layers:\n",
-    "    print (layer.name())\n",
-    "model = full_model.new_graph([\"pool5/drop_7x7_s1\"])"
+    "# Preint the layers and determine which layers to keep for the new model\n"
    ]
   },
   {
@@ -235,7 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.freeze_up_to([\"pool4/3x3_s2\"])"
+    "# Determine which layers to freeze in the model, and which ones should have their weights updated\n"
    ]
   },
   {
@@ -258,11 +265,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputNode = Input(name=\"input\", shape=(3, 224, 224))\n",
-    "inception = model.to_keras()(inputNode)\n",
-    "flatten = Flatten()(inception)\n",
-    "logits = Dense(2)(flatten)\n",
-    "lrModel = Model(inputNode, logits)"
+    "# Recreate the input layer to adjust for the current images' dimmensions\n",
+    "inputNode = \n",
+    "# Add the new input layer to the pretrained model, and add the final output layers that were removed/dropped earlier\n",
+    "inception = \n",
+    "#...\n",
+    "# Create the new model\n",
+    "lrModel = "
    ]
   },
   {
@@ -271,13 +280,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The learning rate and batch size can be adjusted based on data size and size of environment.\n",
-    "# With the current size of the docker container, changing these too much may cause out of memory errors.\n",
-    "# In this case the suggested learning rate is 0.001 to 0.005 and suggested batch size is 4.\n",
-    "classifier = NNClassifier(lrModel, CrossEntropyCriterion(), transformer) \\\n",
-    "        .setLearningRate(0.003).setBatchSize(4).setMaxEpoch(1).setFeaturesCol(\"image\") \\ \n",
-    "        .setCachingSample(False)\n",
-    "pipeline = Pipeline(stages=[classifier])"
+    "# Create an NNClassifier using the lrModel. Include the criterion and transformer in the classifier.\n",
+    "# Then set the learning rate, batch size, max epoch, and features col\n",
+    "classifier = \n",
+    "\n",
+    "# Create a pipeline that uses the NNClassifier\n",
+    "pipeline = "
    ]
   },
   {
@@ -300,7 +308,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "catdogModel = pipeline.fit(trainingDF)"
+    "# Train the model on the trainingDF\n",
+    "catdogModel = "
    ]
   },
   {
@@ -309,7 +318,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictionDF = catdogModel.transform(validationDF).cache()"
+    "# Predict the labels for the validationDF\n",
+    "predictionDF = "
    ]
   },
   {
@@ -318,11 +328,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictionDF.select(\"name\",\"label\",\"prediction\").sort(\"label\", ascending=False).show(10)\n",
-    "predictionDF.select(\"name\",\"label\",\"prediction\").show(10)\n",
-    "correct = predictionDF.filter(\"label=prediction\").count()\n",
-    "overall = predictionDF.count()\n",
-    "accuracy = correct * 1.0 / overall\n",
+    "# Show the first 10 rows of predictions for both cats and dogs\n",
+    "\n",
+    "\n",
+    "# Determine the accuracy of the model\n",
+    "# Need to determine the number of correct predictions, \n",
+    "# the total number of predictions (total number of rows), \n",
+    "# and then calculate accuracy\n",
     "print(\"Test Error = %g \" % (1.0 - accuracy))"
    ]
   },
@@ -356,8 +368,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "samplecat=predictionDF.filter(predictionDF.prediction==1.0).limit(3).collect()\n",
-    "sampledog=predictionDF.filter(predictionDF.prediction==2.0).sort(\"label\", ascending=False).limit(3).collect()"
+    "# Show 3 predictions for the cat label (1.0) and 3 predictions for the dog label (2.0)\n",
+    "samplecat=\n",
+    "sampledog="
    ]
   },
   {
@@ -366,6 +379,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Display the predictions and their associated images\n",
     "from IPython.display import Image, display\n",
     "for cat in samplecat:\n",
     "    print (\"prediction:\"), cat.prediction\n",
@@ -378,6 +392,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Display the predictions and their associated images\n",
     "for dog in sampledog:\n",
     "    print (\"prediction:\"), dog.prediction\n",
     "    display(Image(dog.image.origin[5:]))"
