--- a/Workshop-notebooks/Example4-Anomaly/anomaly-detection-nyc-taxi-incomplete.ipynb
+++ b/Workshop-notebooks/Example4-Anomaly/anomaly-detection-nyc-taxi-incomplete.ipynb
@@ -179,8 +179,7 @@
     }
    ],
    "source": [
-    "# check the timestamp format and frequence \n",
-    "print(df['timestamp'].head(10))"
+    "# check the timestamp format and frequence \n"
    ]
   },
   {
@@ -197,8 +196,7 @@
     }
    ],
    "source": [
-    "# check the mean of passenger number \n",
-    "print(df['value'].mean())"
+    "# check the mean of passenger number \n"
    ]
   },
   {
@@ -221,18 +219,16 @@
    ],
    "source": [
     "# change the type of timestamp column for plotting\n",
-    "df['datetime'] = pd.to_datetime(df['timestamp'])\n",
+    "\n",
     "\n",
     "# visualisation of anomaly throughout time (viz 1)\n",
     "fig, ax = plt.subplots(figsize=(12, 5))\n",
     "\n",
-    "ax.plot(df['datetime'], df['value'], color='blue', linewidth=0.6)\n",
-    "ax.set_title('NYC taxi passengers throughout time')\n",
+    "# plot the value (count of passengers) vs the datetime\n",
     "\n",
-    "plt.xlabel('datetime')\n",
-    "plt.xticks(rotation=45) \n",
-    "plt.ylabel('The Number of NYC taxi passengers')\n",
-    "plt.legend(loc='upper left')\n",
+    "\n",
+    "# set plot features for the x and y axis, along with the legend\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -257,8 +253,11 @@
    "outputs": [],
    "source": [
     "# the hours when people are awake (6:00-00:00)\n",
-    "df['hours'] = df['datetime'].dt.hour\n",
-    "df['awake'] = (((df['hours'] >= 6) & (df['hours'] <= 23)) | (df['hours'] == 0)).astype(int)"
+    "# extract the hours from the datetime\n",
+    "df['hours'] = \n",
+    "# set the awake time and convert to integer\n",
+    "# this column will have 2 values because being awake is binary (well... usually)\n",
+    "df['awake'] = "
    ]
   },
   {
@@ -283,16 +282,20 @@
     "# creation of 2 distinct categories that seem useful (sleeping time and awake time)\n",
     "df['categories'] = df['awake']\n",
     "\n",
-    "a = df.loc[df['categories'] == 0, 'value']\n",
-    "b = df.loc[df['categories'] == 1, 'value']\n",
+    "# set a to be the asleep values (0); set b to be the awak values (1)\n",
+    "a = \n",
+    "b = \n",
     "\n",
+    "# Create two histograms (in the same plot) of a and b\n",
     "fig, ax = plt.subplots()\n",
-    "a_heights, a_bins = np.histogram(a)\n",
-    "b_heights, b_bins = np.histogram(b, bins=a_bins)\n",
+    "a_heights, a_bins = \n",
+    "b_heights, b_bins = \n",
     "\n",
     "width = (a_bins[1] - a_bins[0])/6\n",
     "\n",
+    "# set the first barchart values to a\n",
     "ax.bar(a_bins[:-1], a_heights*100/a.count(), width=width, facecolor='yellow', label='Sleeping time')\n",
+    "# set the second barchart values to b\n",
     "ax.bar(b_bins[:-1]+width, (b_heights*100/b.count()), width=width, facecolor='red', label ='Awake time')\n",
     "ax.set_title('Histogram of NYC taxi passengers in different categories')\n",
     "\n",
@@ -392,24 +395,25 @@
    ],
    "source": [
     "#select and standardize data\n",
-    "data_n = df[['value', 'hours', 'awake']]\n",
-    "min_max_scaler = preprocessing.StandardScaler()\n",
-    "np_scaled = min_max_scaler.fit_transform(data_n)\n",
-    "data_n = pd.DataFrame(np_scaled)\n",
+    "# standardize the 'valve', 'hours', and 'awake' columns\n",
+    "data_n = \n",
+    "min_max_scaler = \n",
+    "np_scaled = \n",
+    "data_n = \n",
     "\n",
     "#important parameters and train/test size\n",
-    "prediction_time = 1 \n",
-    "testdatasize = 1000 # This is approximately 10% of the data. Can be increased at users discretion.\n",
-    "unroll_length = 50\n",
+    "prediction_time = \n",
+    "testdatasize =  # 1000 is approximately 10% of the data. Can be increased at users discretion.\n",
+    "unroll_length = \n",
     "testdatacut = testdatasize + unroll_length  + 1\n",
     "\n",
     "#train data\n",
-    "x_train = data_n[0:-prediction_time-testdatacut].as_matrix()\n",
-    "y_train = data_n[prediction_time:-testdatacut  ][0].as_matrix()\n",
+    "x_train = data_n[0:-prediction_time-testdatacut].values() \n",
+    "y_train = data_n[prediction_time:-testdatacut  ][0].values()\n",
     "\n",
     "#test data\n",
-    "x_test = data_n[0-testdatacut:-prediction_time].as_matrix()\n",
-    "y_test = data_n[prediction_time-testdatacut:  ][0].as_matrix()"
+    "x_test = data_n[0-testdatacut:-prediction_time].values()\n",
+    "y_test = data_n[prediction_time-testdatacut:  ][0].values()"
    ]
   },
   {
@@ -487,11 +491,11 @@
     "        result.append(data[index: index + sequence_length])\n",
     "    return np.asarray(result)\n",
     "\n",
-    "# adapt the datasets for the sequence data shape\n",
-    "x_train = unroll(x_train,unroll_length)\n",
-    "x_test  = unroll(x_test,unroll_length)\n",
-    "y_train = y_train[-x_train.shape[0]:]\n",
-    "y_test  = y_test[-x_test.shape[0]:]\n",
+    "# adapt the datasets for the sequence data shape (using the above function unroll)\n",
+    "x_train = \n",
+    "x_test  = \n",
+    "y_train = \n",
+    "y_test  = \n",
     "\n",
     "# see the shape\n",
     "print(\"x_train\", x_train.shape)\n",
@@ -539,19 +543,22 @@
     "# Build the model\n",
     "model = Sequential()\n",
     "\n",
+    "# create the first LSTM layer\n",
     "model.add(LSTM(\n",
-    "    input_shape=(x_train.shape[1], x_train.shape[-1]),\n",
-    "    output_dim=20,\n",
+    "    input_shape=,\n",
+    "    output_dim=,\n",
     "    return_sequences=True))\n",
-    "model.add(Dropout(0.2))\n",
+    "# add a Dropout layer\n",
     "\n",
+    "# create the second LSTM layer (this layer does not need a specified input, it will use the output of the prior layer)\n",
+    "# return sequence should be False because it the result is not being passed to another LSTM\n",
     "model.add(LSTM(\n",
-    "    10,\n",
+    "    output_dim = ,\n",
     "    return_sequences=False))\n",
-    "model.add(Dropout(0.2))\n",
+    "# add a Dropout layer\n",
     "\n",
-    "model.add(Dense(\n",
-    "    output_dim=1))\n",
+    "# add the output Dense layer\n",
+    "\n",
     "\n",
     "model.compile(loss='mse', optimizer='rmsprop')"
    ]
@@ -586,8 +593,8 @@
     "model.fit(\n",
     "    x_train,\n",
     "    y_train,\n",
-    "    batch_size=1000, # Batch size should be a multiple of the total number of cores in your Spark environment\n",
-    "    nb_epoch=20) # Can be increased or reduced at user's discretion\n",
+    "    batch_size=, # Batch size should be a multiple of the total number of cores in your Spark environment\n",
+    "    nb_epoch=) # Can be increased or reduced at user's discretion\n",
     "print(\"Training completed.\")"
    ]
   },
@@ -653,8 +660,9 @@
     "# plot the predicted values and actual values (for the test data)\n",
     "fig, axs = plt.subplots()\n",
     "\n",
-    "axs.plot(p,color='red', label='predicted values')\n",
-    "axs.plot(y_test,color='blue', label='actual values')\n",
+    "# plot the predicted values and the actual values\n",
+    "axs.plot( ,color='red', label='predicted values')\n",
+    "axs.plot( ,color='blue', label='actual values')\n",
     "axs.set_title('the predicted values and actual values (for the test data)')\n",
     "\n",
     "plt.xlabel('test data index')\n",
