--- a/Workshop-notebooks/Example1-MNIST/mnist.ipynb
+++ b/Workshop-notebooks/Example1-MNIST/mnist.ipynb
@@ -45,13 +45,11 @@
     "\n",
     "import tensorflow as tf\n",
     "from zoo import init_nncontext\n",
-    "from zoo.pipeline.api.net import TFOptimizer, TFDataset\n",
+    "from zoo.pipeline.api.net import TFOptimizer, TFDataset, TFPredictor\n",
     "from bigdl.optim.optimizer import *\n",
     "import sys\n",
     "from tensorflow.keras.models import Model\n",
-    "# from tensorflow.keras.layers import *\n",
-    "# from zoo.pipeline.api.keras.models import Sequential\n",
-    "from zoo.pipeline.api.keras.layers import Dense, Activation, Flatten, Reshape, Convolution2D, MaxPooling2D\n",
+    "from tensorflow.keras.layers import *\n",
     "\n",
     "from bigdl.dataset import mnist\n",
     "from bigdl.dataset.transformer import *"
@@ -146,7 +144,12 @@
     "                             types=[tf.float32, tf.int32],\n",
     "                             batch_size=batch_size,\n",
     "                             val_rdd=testing_rdd\n",
-    "                             )"
+    "                             )\n",
+    "pred_dataset = TFDataset.from_rdd(training_rdd,\n",
+    "                                  names=[\"features\", \"labels\"],\n",
+    "                                  shapes=[[28, 28, 1], []], \n",
+    "                                  types=[tf.float32, tf.int32],\n",
+    "                                  batch_per_thread=1)"
    ]
   },
   {
@@ -223,18 +226,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "* Create a TFPredictor object based on the trained model"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model_predictor = TFPredictor.from_keras(model, pred_dataset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Predict the classes of the data in the testing data (pred_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testing_rdd_preds = model_predictor.predict()"
+   ]
   }
  ],
  "metadata": {
