--- a/Workshop-notebooks/Example3-NCF/ncf-explicit-feedback-incomplete.ipynb
+++ b/Workshop-notebooks/Example3-NCF/ncf-explicit-feedback-incomplete.ipynb
@@ -114,20 +114,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2017-08-03T08:13:08.071512Z",
-     "start_time": "2017-08-03T08:13:04.077308Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# movielens_data = movielens.get_id_ratings(\"/tmp/movielens/\")\t"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -231,11 +217,12 @@
    },
    "outputs": [],
    "source": [
-    "trainPairFeatureRdds, valPairFeatureRdds = pairFeatureRdds.randomSplit([, ], # Could be [0.8, 0.2], [0.7, 0.3], [0.6, 0.4], etc\n",
-    "                                                                       seed = 1)\n",
-    "valPairFeatureRdds.cache()\n",
-    "train_rdd = trainPairFeatureRdds.map(lambda pair_feature: pair_feature.sample)\n",
-    "val_rdd = valPairFeatureRdds.map(lambda pair_feature: pair_feature.sample)"
+    "# Create training and validation Pair Features Rdds\n",
+    "trainPairFeatureRdds, valPairFeatureRdds =\n",
+    "\n",
+    "# Format the pair features rdds into rdds of sample\n",
+    "train_rdd = \n",
+    "val_rdd = "
    ]
   },
   {
@@ -269,8 +256,7 @@
     }
    ],
    "source": [
-    "print(train_rdd.count())\n",
-    "train_rdd.take(3)"
+    "# Print the row count of the training dataset and show the first 3 rows\n"
    ]
   },
   {
@@ -306,9 +292,8 @@
     }
    ],
    "source": [
-    "ncf = NeuralCF(user_count=max_user_id, item_count=max_movie_id, class_num=5, \n",
-    "               hidden_layers=[], # Could be [20], [20, 10], [50, 25], [30, 20, 10], [100, 50, 25], etc.\n",
-    "               include_mf = False) #Changing include_mf to True will change how the model works by including matrix factorization"
+    "# Initialize the NeuralCF model with user_count, item_count, class_num, and hidden_layers\n",
+    "ncf = "
    ]
   },
   {
@@ -361,19 +346,22 @@
     "# Suggested learning rate is 0.001 to 0.05\n",
     "learning_rate = \n",
     "\n",
+    "# Create the optimizer for the NeuralCF model\n",
     "optimizer = Optimizer(\n",
-    "    model=ncf,\n",
-    "    training_rdd=train_rdd,\n",
-    "    criterion=ClassNLLCriterion(), # There are other criterion measures that could be used, such as CrossEntropyCriterion()\n",
-    "    end_trigger=MaxEpoch(num_epochs),\n",
-    "    batch_size=batch_size,\n",
-    "    optim_method=Adam(learningrate = learning_rate)) # Another possible optimization method is SGD\n",
+    "    model=,\n",
+    "    training_rdd=,\n",
+    "    criterion=, \n",
+    "    end_trigger=,\n",
+    "    batch_size=,\n",
+    "    optim_method=\n",
+    ")\n",
     "\n",
+    "# Create the validation component of the optimizer\n",
     "optimizer.set_validation(\n",
-    "    batch_size=batch_size,\n",
-    "    val_rdd=val_rdd,\n",
-    "    trigger=EveryEpoch(),\n",
-    "    val_method=[MAE(), Loss(ClassNLLCriterion())] # if criterion is changed above, it should be bacnge here to match.\n",
+    "    batch_size=,\n",
+    "    val_rdd=,\n",
+    "    trigger=,\n",
+    "    val_method=\n",
     ")"
    ]
   },
@@ -456,7 +444,7 @@
     }
    ],
    "source": [
-    "optimizer.optimize()"
+    "# Train (optimize) the model (using the optimizer)"
    ]
   },
   {
@@ -485,10 +473,12 @@
     }
    ],
    "source": [
-    "results = ncf.predict(val_rdd)\n",
+    "# Predict the values of the data in the val_rdd\n",
+    "results = \n",
     "results.take(5)\n",
     "\n",
-    "results_class = ncf.predict_class(val_rdd)\n",
+    "# Predict the class of the data in the val_rdd\n",
+    "results_class = \n",
     "results_class.take(5)"
    ]
   },
@@ -520,7 +510,8 @@
     }
    ],
    "source": [
-    "userItemPairPrediction = ncf.predict_user_item_pair(valPairFeatureRdds)\n",
+    "# Predict the user-item pairs\n",
+    "userItemPairPrediction = \n",
     "for result in userItemPairPrediction.take(5): print(result)"
    ]
   },
@@ -549,8 +540,8 @@
     }
    ],
    "source": [
-    "userRecs = ncf.recommend_for_user(valPairFeatureRdds, 3)\n",
-    "for result in userRecs.take(5): print(result)"
+    "# Recommend 3 items for every user and print a few results\n",
+    "userRecs = \n"
    ]
   },
   {
@@ -578,8 +569,8 @@
     }
    ],
    "source": [
-    "itemRecs = ncf.recommend_for_item(valPairFeatureRdds, 3)\n",
-    "for result in itemRecs.take(5): print(result)"
+    "# Recommend 3 users for every item and print a few results\n",
+    "itemRecs = \n"
    ]
   },
   {
@@ -625,11 +616,7 @@
     "val_loss  = np.array(val_summary.read_scalar(\"Loss\"))\n",
     "\n",
     "#plot the train and validation curves\n",
-    "# each event data is a tuple in form of (iteration_count, value, timestamp)\n",
-    "plt.plot(loss[:,0],loss[:,1],label='train loss')\n",
-    "plt.plot(val_loss[:,0],val_loss[:,1],label='val loss',color='green')\n",
-    "plt.scatter(val_loss[:,0],val_loss[:,1],color='green')\n",
-    "plt.legend();"
+    "# each event data is a tuple in form of (iteration_count, value, timestamp)\n"
    ]
   },
   {
@@ -667,9 +654,7 @@
     "val_mae  = np.array(val_summary.read_scalar(\"MAE\"))\n",
     "\n",
     "#plot the train and validation curves\n",
-    "# each event data is a tuple in form of (iteration_count, value, timestamp)\n",
-    "plt.plot(val_mae[:,0], val_mae[:,1], label='MAE')\n",
-    "plt.legend();"
+    "# each event data is a tuple in form of (iteration_count, value, timestamp)\n"
    ]
   },
   {
@@ -698,7 +683,8 @@
     }
    ],
    "source": [
-    "res2 = ncf.evaluate(val_rdd, batch_size, [MAE()])"
+    "# Evaluate the NeuralCF Model using the Mean Absolute Error metric\n",
+    "res2 = "
    ]
   },
   {
