Minor edits to markdown cells

--- a/Final-notebooks/Example2-TransferLearning/transfer-learning.ipynb
+++ b/Final-notebooks/Example2-TransferLearning/transfer-learning.ipynb
@@ -20,62 +20,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Preparation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1. Get the dogs-vs-cats datasets"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Download the training dataset from https://www.kaggle.com/c/dogs-vs-cats and extract it. \n",
+    "## Import Required Packages\n",
     "\n",
-    "The following commands copy about 1100 images of cats and dogs into demo/cats and demo/dogs separately. \n",
-    "```shell\n",
-    "mkdir -p demo/dogs\n",
-    "mkdir -p demo/cats\n",
-    "cp train/cat.7* demo/cats\n",
-    "cp train/dog.7* demo/dogs```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2. Get the pre-trained Inception-V1 model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Download the pre-trained Inception-V1 model from [Zoo](https://s3-ap-southeast-1.amazonaws.com/bigdl-models/imageclassification/imagenet/bigdl_inception-v1_imagenet_0.4.0.model) \n",
-    " Alternatively, user may also download pre-trained caffe/Tensorflow/keras model."
+    "The following modules are required for this notebook."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/lib64/python2.7/site-packages/scipy/sparse/lil.py:16: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from . import _csparsetools\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import re\n",
+    "import warnings\n",
+    "# Ignoring the warnings to improve readability of the notebook\n",
+    "warnings.filterwarnings(\"ignore\", message=\"numpy.dtype size changed\")\n",
     "\n",
+    "import re\n",
     "from bigdl.nn.criterion import CrossEntropyCriterion\n",
     "from pyspark.ml import Pipeline\n",
     "from pyspark.sql.functions import col, udf\n",
@@ -105,8 +65,9 @@
     "manually set model_path and image_path for training\n",
     "\n",
     "1. model_path = path to the pre-trained models. (E.g. path/to/model/bigdl_inception-v1_imagenet_0.4.0.model)\n",
+    "2. image_path = path to the folder of the training images. (E.g. path/to/data/dogs-vs-cats/demo/\\*/\\*)\n",
     "\n",
-    "2. image_path = path to the folder of the training images. (E.g. path/to/data/dogs-vs-cats/demo/\\*/\\*)"
+    "NNImageReader loads image into Spark DataFrame."
    ]
   },
   {
