Updated MNIST with local dataset and other features

--- a/Final-notebooks/Example5-ObjectDetection/object-detection.ipynb
+++ b/Final-notebooks/Example5-ObjectDetection/object-detection.ipynb
@@ -35,9 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from IPython.display import Image, display\n",
@@ -54,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,12 +105,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "load model done\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
-    "    model_path = \"analytics-zoo_ssd-mobilenet-300x300_PASCAL_0.1.0.model\"\n",
+    "    model_path = \"/home/bala/odsc/ODSC-east-2019/models/analytics-zoo_ssd-mobilenet-300x300_PASCAL_0.1.0.model\"\n",
     "    model = ObjectDetector.load_model(model_path)\n",
     "    print(\"load model done\")\n",
     "except Exception as e:\n",
@@ -131,8 +147,8 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    path = \"train_dog.mp4\"\n",
-    "    myclip = VideoFileClip(path).subclip(8,18)\n",
+    "    path = \"/home/bala/odsc/ODSC-east-2019/datasets/objdetect/train_dog.mp4\"\n",
+    "    myclip = VideoFileClip(path).subclip(10,18)\n",
     "except Exception as e:\n",
     "    print(\"The video doesn't exist.\")\n",
     "    print(\"Please prepare the video first.\")\n",
