--- a/Final-notebooks/Example1-MNIST/mnist.ipynb
+++ b/Final-notebooks/Example1-MNIST/mnist.ipynb
@@ -33,9 +33,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib64/python2.7/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "# Copyright 2018 Analytics Zoo Authors.\n",
     "# http://www.apache.org/licenses/LICENSE-2.0\n",
@@ -52,7 +61,9 @@
     "from tensorflow.keras.layers import *\n",
     "\n",
     "from bigdl.dataset import mnist\n",
-    "from bigdl.dataset.transformer import *"
+    "from bigdl.dataset.transformer import *\n",
+    "\n",
+    "import mnist_utilities_workshop"
    ]
   },
   {
@@ -64,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,13 +98,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get data, pre-process and create TFDataset\n",
     "def get_data_rdd(dataset):\n",
-    "    (images_data, labels_data) = mnist.read_data_sets(\"/tmp/mnist\", dataset)\n",
+    "    (images_data, labels_data) = mnist_utilities_workshop.ws_read_data_sets(\"/opt/work/ODSC-east-2019/datasets/mnist/\", dataset)\n",
     "    # image_rdd = sc.parallelize(images_data[:data_num])\n",
     "    image_rdd = sc.parallelize(images_data)\n",
     "    # labels_rdd = sc.parallelize(labels_data[:data_num])\n",
@@ -113,9 +124,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Extracting', '/home/bala/odsc/ODSC-east-2019/datasets/mnist/train-images-idx3-ubyte.gz')\n",
+      "('Extracting', '/home/bala/odsc/ODSC-east-2019/datasets/mnist/train-labels-idx1-ubyte.gz')\n",
+      "('Extracting', '/home/bala/odsc/ODSC-east-2019/datasets/mnist/t10k-images-idx3-ubyte.gz')\n",
+      "('Extracting', '/home/bala/odsc/ODSC-east-2019/datasets/mnist/t10k-labels-idx1-ubyte.gz')\n"
+     ]
+    }
+   ],
    "source": [
     "training_rdd = get_data_rdd(\"train\")\n",
     "testing_rdd = get_data_rdd(\"test\")"
@@ -130,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,14 +208,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Initialize the model and the optimizer."
+    "## Initialize the model and the optimizer."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "creating: createRMSprop\n",
+      "creating: createClassNLLCriterion\n",
+      "creating: createLoss\n",
+      "creating: createZooKerasAccuracy\n",
+      "INFO:tensorflow:Froze 6 variables.\n",
+      "INFO:tensorflow:Converted 6 variables to const ops.\n",
+      "creating: createTFTrainingHelper\n",
+      "creating: createTFValidationMethod\n",
+      "creating: createTFValidationMethod\n",
+      "creating: createIdentityCriterion\n",
+      "creating: createMaxEpoch\n",
+      "creating: createDistriOptimizer\n",
+      "creating: createEveryEpoch\n"
+     ]
+    }
+   ],
    "source": [
     "model = Model(inputs=data, outputs=predictions)\n",
     "\n",
@@ -208,20 +250,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Set location for model training summary output.\n",
-    "* Train the model."
+    "## Set location for model training summary output.\n",
+    "## Train the model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "creating: createTrainSummary\n",
+      "creating: createValidationSummary\n",
+      "creating: createMaxEpoch\n"
+     ]
+    }
+   ],
    "source": [
     "optimizer.set_train_summary(TrainSummary(\"/tmp/mnist_log\", \"mnist\"))\n",
     "optimizer.set_val_summary(ValidationSummary(\"/tmp/mnist_log\", \"mnist\"))\n",
-    "# kick off training\n",
-    "max_epoch = 5\n",
+    "max_epoch = 15\n",
     "optimizer.optimize(end_trigger=MaxEpoch(max_epoch))"
    ]
   },
@@ -229,32 +280,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Create a TFPredictor object based on the trained model"
+    "## Save the weights so it can be read later for inference"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_predictor = TFPredictor.from_keras(model, pred_dataset)"
+    "model.save_weights(\"mnist_keras.h5\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Predict the classes of the data in the testing data (pred_dataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "testing_rdd_preds = model_predictor.predict()"
+    "## Run Tensorboard\n",
+    "\n",
+    "tensorboard --logdir=/tmp/mnist_log/mnist/train --port 8082"
    ]
   }
  ],
