--- a/Final-notebooks/Example6-ImageSimilarity/image-similarity.ipynb
+++ b/Final-notebooks/Example6-ImageSimilarity/image-similarity.ipynb
@@ -118,16 +118,11 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "creating: createDefault\n",
-      "creating: createSGD\n",
-      "creating: createSeqToTensor\n",
-      "creating: createSeqToTensor\n",
-      "creating: createSeqToTensor\n",
-      "creating: createSeqToTensor\n",
-      "creating: createSeqToTensor\n"
+      "/usr/lib64/python2.7/site-packages/scipy/sparse/lil.py:16: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from . import _csparsetools\n"
      ]
     }
    ],
@@ -583,21 +578,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.5"
   }
  },
  "nbformat": 4,
